--- a/Models/SpeechCodec/2024.12.16_SECodec.md
+++ b/Models/SpeechCodec/2024.12.16_SECodec.md
@@ -26,6 +26,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 With the rapid advancement of large language models (LLMs), discrete speech representations have become crucial for integrating speech into LLMs.
 Existing methods for speech representation discretization rely on a predefined codebook size and Euclidean distance-based quantization.
 However,
@@ -33,13 +36,34 @@ However,
 2) The Euclidean distance-based quantization may lead to audio distortion when the size of the codebook is controlled within a reasonable range.
 
 In fact, in the field of information compression, structural information and entropy guidance are crucial, but previous methods have largely overlooked these factors.
-Therefore, we address the above issues from an information-theoretic perspective, we present SECodec, a novel speech representation codec based on structural entropy (SE) for building speech language models.
+Therefore, we address the above issues from an information-theoretic perspective, we present ***SECodec***, a novel speech representation codec based on structural entropy (SE) for building speech language models.
 Specifically, we first model speech as a graph, clustering the speech features nodes within the graph and extracting the corresponding codebook by hierarchically and disentangledly minimizing 2D SE.
 Then, to address the issue of audio distortion, we propose a new quantization method.
 This method still adheres to the 2D SE minimization principle, adaptively selecting the most suitable token corresponding to the cluster for each incoming original speech node.
-Furthermore, we develop a Structural Entropy-based Speech Language Model (SESLM) that leverages SECodec.
-Experimental results demonstrate that SECodec performs comparably to EnCodec in speech reconstruction, and SESLM surpasses VALL-E in zero-shot text-to-speech tasks.
+Furthermore, we develop a ***Structural Entropy-based Speech Language Model (SESLM)*** that leverages ***SECodec***.
+Experimental results demonstrate that ***SECodec*** performs comparably to EnCodec in speech reconstruction, and ***SESLM*** surpasses VALL-E in zero-shot text-to-speech tasks.
 Code, demo speeches, speech feature graph, SE codebook, and models are available at [Github](https://github.com/wlq2019/SECodec).
+
+</details>
+<br>
+
+随着大型语言模型的快速发展, 离散语音表示对于将语音集成到大语言模型中变得至关重要.
+现有的语音表示离散化方法依赖于预定义的码本大小和基于欧几里得距离的量化.
+然而,
+1) 码本的大小是一个关键参数, 它影响编解码器的性能和下游任务的训练效率.
+2) 基于欧几里得距离的量化在码本大小控制在合理范围内时可能导致音频失真.
+
+事实上, 在信息压缩领域, 结构信息和熵指导是至关重要的, 但之前的方法在很大程度上忽视了这些因素.
+因此, 我们从信息论的角度解决上述问题, 提出了 ***SECodec***，一种基于**结构熵 (Structural Entropy, SE)** 的新型语音表示编解码器, 用于构建语音语言模型.
+
+具体来说, 我们首先将语音建模为图, 对图中的语音特征节点进行聚类, 并通过层次地和解耦地最小化二维结构熵来提取相应的码本.
+然后, 为了解决音频失真的问题, 我们提出了一种新的量化方法.
+该方法仍然遵循二维结构熵最小化原则, 自适应地为每个输入的原始语音节点选择最适合的对应聚类的标记.
+
+此外, 我们开发了一种 ***基于结构熵的语音语言模型 (Structural Entropy-based Speech Language Model, SESLM)***, 该模型利用了 ***SECodec***.
+
+实验结果表明, ***SECodec*** 在语音重建方面的表现与 EnCodec 相当, 而 ***SESLM*** 在零样本文本到语音任务中超越了 VALL-E.
+代码, 演示语音, 语音特征图, SE 码本和模型可在 [Github](https://github.com/wlq2019/SECodec) 上获取.
 
 ## 1·Introduction: 引言
 
@@ -68,16 +92,16 @@ However, i) existing speech discretization methods rely on $k$-means to initiali
 These issues result in a loss of information and produce overly long tokens that are difficult to train, thereby impairing overall performance.
 
 In this work, we address the aforementioned issues from an information-theoretic perspective, drawing inspiration from structural entropy (SE)~\cite{li2016structural,cao2024hierarchical}, a metric that assesses the amount of information contained in a graph~\cite{yang2024hierarchical,zeng2024scalable,yang2024adaptive,yang2024sebot,cao2024multi,peng2024unsupervised,zou2024multispans}.
-We present SECodec, a novel speech representation codec tokenizer based on structural entropy, which can automatically determine the appropriate codebook size and integrate structural information into the quantization process.
+We present ***SECodec***, a novel speech representation codec tokenizer based on structural entropy, which can automatically determine the appropriate codebook size and integrate structural information into the quantization process.
 Experiments demonstrate that these approaches effectively mitigate the information loss problem prevalent in existing speech discretization methods.
 
 Our main contributions are:
 -  We model the speech representation codec from an information-theoretic perspective.
-Compared to previous methods that use $k$-means, the proposed SECodec, by introducing structural information and entropy guidance, learns a more compressive and informative codebook without requiring a predetermined codebook size.
+Compared to previous methods that use $k$-means, the proposed ***SECodec***, by introducing structural information and entropy guidance, learns a more compressive and informative codebook without requiring a predetermined codebook size.
 To the best of our knowledge, we are the first to apply structural entropy (SE) minimization for a speech representation codec.
 - To address the issue of audio distortion when controlling codebook size, we propose a new quantization method that iteratively selects appropriate clusters for the added original speech features using a SE heuristic function.
 This approach significantly enhances the quality of information in the speech tokens.
-- Extensive experimental results demonstrate that SECodec performs comparably to EnCodec in speech reconstruction, while SESLM surpasses VALL-E in zero-shot text-to-speech tasks on a multi-speaker benchmark dataset.
+- Extensive experimental results demonstrate that ***SECodec*** performs comparably to EnCodec in speech reconstruction, while ***SESLM*** surpasses VALL-E in zero-shot text-to-speech tasks on a multi-speaker benchmark dataset.
 
 ## 2·Preliminary: 预备知识
 
@@ -129,13 +153,13 @@ where $d_i$ is the degree of vertex $v_i$, $g_i$ is the cut, i.e., the sum of ed
 
 ## 3·Methodology: 方法
 
-Figure~\ref{model} presents an overview of SECodec.
+Figure~\ref{model} presents an overview of ***SECodec***.
 Our model is based on the RVQ-GANs~\cite{du2024funcodec} framework, akin to SoundStream~\cite{zeghidour2021soundstream} and EnCodec~\cite{defossez2022high}.
 However, we employ 2D structural entropy to optimize both the codebook initialization and the quantization process, resulting in more compressive codebook and more informative tokens.
 We begin by formalizing the task.
 Subsequently, we propose a novel structural entropy-based approach for codebook construction.
 We then present our informative quantization process.
-Finally, we introduce the training objective and design the SESLM.
+Finally, we introduce the training objective and design the ***SESLM***.
 
 ### Problem Formalization
 
@@ -150,7 +174,7 @@ Speech feature graph partitioning decodes $G$ into $\mathcal{P}$, which defines 
 A faithful decoding of the speech feature correlations in $G$ assigns related speech features to the same cluster and unrelated ones to different clusters.
 Previous RVQ-based speech codec methods use $k$-means to initialize the codebook space.
 These empirically defined codebooks, which must be predetermined, lead to a loss of information and result in overly long tokens that are difficult to train, consequently impairing overall performance.
-To address this issue, SECodec conducts codebook partitioning under the guidance of 2D structural entropy (SE) minimization.
+To address this issue, ***SECodec*** conducts codebook partitioning under the guidance of 2D structural entropy (SE) minimization.
 This approach reveals the essential second-order (cluster-wise) structure inherent in the raw graph without prior knowledge of the number of speech feature clusters.
 
 li2016structural (\citeyear{li2016structural}) propose a vanilla greedy 2D structural entropy (SE) minimization algorithm that repeatedly merges any two nodes in the encoding tree $\mathcal{T}$ resulting in the largest decrease in 2D SE until reaching the minimum possible value.
@@ -189,7 +213,7 @@ The indexes $\mathcal{M}$ and $\mathcal{J}$ are the samples of $\textbf{e}_i$ an
 By minimizing Eq.~\ref{eq:mi}, we can decrease the correlation among
 accent features $\textbf{e}_i$ and speech features $\textbf{e}_j$.
 Finally, the central features of each cluster in $\mathcal{P}'$ are concatenated to form the codebook $\mathcal{E}_{codebook}$ columns in Figure~\ref{model}B.3.
-In summary, SECodec constructs a compressive codebook from complex speech feature graphs in an unsupervised and disentangled manner.
+In summary, ***SECodec*** constructs a compressive codebook from complex speech feature graphs in an unsupervised and disentangled manner.
 
 ### Quantization via Node Game-based 2D SE Minimization
 
@@ -197,7 +221,7 @@ The quantization of previous RVQ-based speech codec methods is to compare the in
 However, the comparison is performed by simply calculating the Euclidean distance between vectors.
 In high-dimensional space, the Euclidean distance tends to be uniformly distributed, which can distort the results and affect the quality of the quantized tokens.
 Consequently, the tokens obtained after quantization may lack sufficient real information when the size of the codebook is controlled within a reasonable range.
-To address this issue, SECodec views quantization as a process where graph nodes dynamically categorize subgraphs~\cite{zeng2024effective,yang2024incremental,sun2024lsenet} as shown in Figure ~\ref{model}C.1, treating new input features as added nodes in Figure ~\ref{model}C.2.
+To address this issue, ***SECodec*** views quantization as a process where graph nodes dynamically categorize subgraphs~\cite{zeng2024effective,yang2024incremental,sun2024lsenet} as shown in Figure ~\ref{model}C.1, treating new input features as added nodes in Figure ~\ref{model}C.2.
 In this approach, added nodes iteratively select the appropriate clusters through a structural entropy heuristic function, the selected clusters then correspond to the speech tokens as illustrated in Figure~\ref{model}C.3.
 Specifically, given a speech feature graph and its corresponding set of codebooks $E = [\textbf{e}_1,...,\textbf{e}_i,...,\textbf{e}_K]$.
 The added speech feature node $x$ selects the current codebook $\textbf{e}_i$, changing the codebook set to
@@ -230,14 +254,14 @@ In terms of training objective, we follow the setup of \cite{du2024funcodec}.
 The training objective consists of three components: reconstruction loss terms, adversarial loss terms, and RVQ commit losses.
 In the time domain, the L1 distance between the original speech and the reconstructed speech is minimized.
 In the frequency domain, both L1 and L2 distances are minimized across multiple Mel and magnitude spectra.
-For adversarial losses, SECodec incorporates several discriminators, including a multi-scale discriminator (MSD), a multi-period discriminator (MPD), and a multi-scale STFT-based (MSTFTD) discriminator.
+For adversarial losses, ***SECodec*** incorporates several discriminators, including a multi-scale discriminator (MSD), a multi-period discriminator (MPD), and a multi-scale STFT-based (MSTFTD) discriminator.
 
 ### SESLM
 
-We build a structural entropy-based speech language model upon SECodec.
+We build a structural entropy-based speech language model upon ***SECodec***.
 Consisting of autoregressive and non-autoregressive models, it can hierarchically model information in speech.
 Compared to VALL-E~\cite{wang2023neural}, we include the input of speech tokens in the autoregressive model part.
-We believe that the speech tokens extracted by SECodec are richer in speech information, which benefits speech language model training.
+We believe that the speech tokens extracted by ***SECodec*** are richer in speech information, which benefits speech language model training.
 The model learns to perform conditional generation of a neural code sequence, denoted as $\mathcal{O}$,  based on two input prompts: textual prompt $u$ and acoustic prompt $\mathcal{S}$.
 The training objective is formulated as:
 
@@ -249,19 +273,19 @@ $$
 $$
 
 where $\mathcal{O}_{\textless t,1}=[\mathcal{O}_{1,1},\ldots,\mathcal{O}_{t-1,1}]$, while $\theta_{AR}$ represents the AR Transformer model parameters. $\theta_{NAR}$ represents the NAR model parameters, while $\mathcal{O}_{:,l}$ denotes the entire sequence of $\mathcal{O}_{t,l}$ for the $l$th layer, and $\mathcal{O}_{:,\textless l}=[\mathcal{O}_{:,1},\ldots,\mathcal{O}_{:,l-1}]$ for $l=2,\ldots,8$.
-Note that the AR model in SESLM is conditioned on the concatenated embeddings of both the acoustic and textual prompts.
+Note that the AR model in ***SESLM*** is conditioned on the concatenated embeddings of both the acoustic and textual prompts.
 This formulation differs from that of VALL-E, where the AR model is only conditioned on the textual prompt and the past acoustic history.
 We validate the effectiveness of the structural entropy-based speech language model on the zero-shot TTS task.
 During inference, text input is converted to a phoneme sequence and the speech prompt to speech tokens.
 These are concatenated to form the prompts for both the AR and NAR models.
 The tokens generated by the AR and NAR models are then concatenated to construct the speech token matrix.
-Finally, the SECodec decoder is used to generate the waveform conditioned on the complete token matrix.
+Finally, the ***SECodec*** decoder is used to generate the waveform conditioned on the complete token matrix.
 
 ## 4·Experiments: 实验
 
 ### Data
 
-For SECodec training, we use the LibriSpeech~\cite{panayotov2015librispeech} dataset.
+For ***SECodec*** training, we use the LibriSpeech~\cite{panayotov2015librispeech} dataset.
 At each training iteration, a 3.2 second segment is randomly cropped from the speech samples.
 For zero-shot TTS, we train AR and NAR models on the English subset of the Multilingual LibriSpeech dataset~\cite{pratap2020mls}, which contains 44,000 hours of transcribed speech data derived from LibriVox audiobooks.
 We select speech samples with durations ranging from 3 to 14 seconds for the training data.
@@ -284,8 +308,8 @@ To prevent the discriminator from becoming too dominant, we only update it when 
 
 ### Baselines
 
-For SECodec, we consider two baselines: 1) EnCodec~\cite{defossez2022high}, and 2) SpeechTokenizer~\cite{zhang2023speechtokenizer}, a state-of-the-art speech tokenizer for speech language models.
-For SESLM, we consider two baselines: 1) VALL-E~\cite{wang2023neural}, and 2) ULSM~\cite{zhang2023speechtokenizer}.
+For ***SECodec***, we consider two baselines: 1) EnCodec~\cite{defossez2022high}, and 2) SpeechTokenizer~\cite{zhang2023speechtokenizer}, a state-of-the-art speech tokenizer for speech language models.
+For ***SESLM***, we consider two baselines: 1) VALL-E~\cite{wang2023neural}, and 2) ULSM~\cite{zhang2023speechtokenizer}.
 
 ### Metrics
 
@@ -294,7 +318,7 @@ For objective metrics, we used mel-cepstrum distortion (MCD)~\cite{toda2007voice
 Additionally, we evaluated content accuracy through Word Error Rate (WER) by transcribing the speech using the Whisper en-medium model~\cite{radford2023robust}.
 For subjective metrics, we use MUSHRA following SpeechTokenizer~\cite{zhang2023speechtokenizer}.
 
-For evaluating SESLM, we perform zero-shot text-to-speech assessments using the VCTK~\cite{veaux2016superseded} dataset, which includes recordings from 108 speakers with no overlap between the training data and the VCTK dataset.
+For evaluating ***SESLM***, we perform zero-shot text-to-speech assessments using the VCTK~\cite{veaux2016superseded} dataset, which includes recordings from 108 speakers with no overlap between the training data and the VCTK dataset.
 For each speaker, we randomly select a 3-second utterance as the prompt and use the text from a different utterance as the input.
 Objective metrics include evaluating speaker similarity and Word Error Rate (WER).
 To assess speaker similarity, we utilize the WavLM-TDCNN~\cite{chen2022wavlm} speaker embedding model to measure the similarity.
@@ -306,18 +330,18 @@ As subjective metrics, we utilize Mean Opinion Score (MOS) for evaluating subjec
 ### Speech Reconstruction
 
 Table~\ref{tab:results_SR} provides a detailed summary of the speech reconstruction experiment results.
-SECodec outperforms both SpeechTokenizer and EnCodec by achieving a lower WER, highlighting its superior capability to retain content information.
-Furthermore, SECodec surpasses SpeechTokenizer and EnCodec in both MCD, RMSE, VISQOL and MUSHRA scores, underscoring its enhanced proficiency in producing high-quality speech.
+***SECodec*** outperforms both SpeechTokenizer and EnCodec by achieving a lower WER, highlighting its superior capability to retain content information.
+Furthermore, ***SECodec*** surpasses SpeechTokenizer and EnCodec in both MCD, RMSE, VISQOL and MUSHRA scores, underscoring its enhanced proficiency in producing high-quality speech.
 
 ### Zero-shot TTS
 
-Table~\ref{tab:results_tts} illustrates that our SESLM achieves a lower Word Error Rate (WER) compared to USLM and VALL-E.
-This finding underscores SECodec's capability to enhance the precision of content information modeling.
-Moreover, SESLM exhibits superior speaker similarity, suggesting that the modeled speech's structural information more effectively facilitates the extraction of paralinguistic features.
+Table~\ref{tab:results_tts} illustrates that our ***SESLM*** achieves a lower Word Error Rate (WER) compared to USLM and VALL-E.
+This finding underscores ***SECodec***'s capability to enhance the precision of content information modeling.
+Moreover, ***SESLM*** exhibits superior speaker similarity, suggesting that the modeled speech's structural information more effectively facilitates the extraction of paralinguistic features.
 
 ### Ablation Study
 
-Furthermore, we conducted an ablation study to analyze the performance effects of different components in SECodec, with the results presented in Table~\ref{tab:results_SR}.
+Furthermore, we conducted an ablation study to analyze the performance effects of different components in ***SECodec***, with the results presented in Table~\ref{tab:results_SR}.
 The findings show that when SE quantization is removed, the model still performs well and outperforms most of the baseline models, but there is a noticeable decrease in speech quality.
 Additionally, when the SE codebook component is excluded, the results are significantly poorer, highlighting its critical importance to the overall performance.
 
@@ -326,31 +350,31 @@ Additionally, when the SE codebook component is excluded, the results are signif
 We first analyzed the impact of different codebook sizes on the performance of EnCodec.
 It is evident that selecting an appropriate codebook size is crucial; a small codebook size (e.g., 468) leads to performance degradation, while an excessively large codebook (e.g., 4096) results in the model's failure to converge.
 Furthermore, we examined the influence of the number of nodes and edges in the speech feature graph during the SE minimization process.
-Table~\ref{tab:results_SR} presents the impact of varying the number of nodes and edges on the performance of SECodec.
+Table~\ref{tab:results_SR} presents the impact of varying the number of nodes and edges on the performance of ***SECodec***.
 It can be observed that different numbers of nodes and edges, constructed with different similarity thresholds, lead to varying codebook sizes, which in turn affect the results.
 The best performance in speech reconstruction was achieved with 10,000 nodes and an edge threshold of 0.2.
-A similar conclusion is drawn from the ablation experiments on SESLM, as shown in Table~\ref{tab:results_tts}.
-On the other hand, SECodec achieves the best performance while also having the smallest model parameter size, further highlighting the importance of automatically selecting the appropriate codebook size.
+A similar conclusion is drawn from the ablation experiments on ***SESLM***, as shown in Table~\ref{tab:results_tts}.
+On the other hand, ***SECodec*** achieves the best performance while also having the smallest model parameter size, further highlighting the importance of automatically selecting the appropriate codebook size.
 
 ### Codebook and Quantized Output Visualization
 
-To demonstrate the compressive and informative nature of the codebook learned by SECodec, we first visualized each column vector in the codebooks initialized by different methods using t-SNE.
+To demonstrate the compressive and informative nature of the codebook learned by ***SECodec***, we first visualized each column vector in the codebooks initialized by different methods using t-SNE.
 As illustrated in Figure~\ref{figure_codebook}(a) and Figure~\ref{figure_codebook}(b), the codebook initialized with k-means exhibits an uneven distribution in space, with cluster centers entangled and overlapping.
-In contrast, the codebook initialized with SECodec is more evenly distributed and discrete.
-To further illustrate the effectiveness of the codebook learned by SECodec, we visualized the quantized outputs of 1,000 speech samples.
-As shown in Figure~\ref{figure_codebook}(c) and Figure~\ref{figure_codebook}(d), the features of different speech samples obtained by SECodec are more disentangled and distinguishable compared to those obtained by EnCodec.
+In contrast, the codebook initialized with ***SECodec*** is more evenly distributed and discrete.
+To further illustrate the effectiveness of the codebook learned by ***SECodec***, we visualized the quantized outputs of 1,000 speech samples.
+As shown in Figure~\ref{figure_codebook}(c) and Figure~\ref{figure_codebook}(d), the features of different speech samples obtained by ***SECodec*** are more disentangled and distinguishable compared to those obtained by EnCodec.
 
 ### Effectiveness of SE Quantization
 
 Figure~\ref{figure_quantization} displays the spectrogram and F0 (fundamental frequency) of both the reference speech and the resynthesized (synthesized) speech with identical content.
-It is evident that SECodec preserves the detailed features of the audio more effectively than EnCodec, particularly in maintaining the intricacies of the wave peaks at the fundamental frequency line (F0), as shown in Figure~\ref{figure_quantization}(a), Figure~\ref{figure_quantization}(b), and Figure~\ref{figure_quantization}(c).
-This observation is consistent in the speech synthesized by SESLM compared to VALL-E, as shown in Figure~\ref{figure_quantization}(d), Figure~\ref{figure_quantization}(e), and Figure~\ref{figure_quantization}(f), demonstrating that quantization via node game-based 2D SE minimization significantly reduces speech distortion caused by Euclidean distance-based quantization.
+It is evident that ***SECodec*** preserves the detailed features of the audio more effectively than EnCodec, particularly in maintaining the intricacies of the wave peaks at the fundamental frequency line (F0), as shown in Figure~\ref{figure_quantization}(a), Figure~\ref{figure_quantization}(b), and Figure~\ref{figure_quantization}(c).
+This observation is consistent in the speech synthesized by ***SESLM*** compared to VALL-E, as shown in Figure~\ref{figure_quantization}(d), Figure~\ref{figure_quantization}(e), and Figure~\ref{figure_quantization}(f), demonstrating that quantization via node game-based 2D SE minimization significantly reduces speech distortion caused by Euclidean distance-based quantization.
 Consequently, our method retains more detailed information in the synthesized speech.
 
 ## 6·Conclusions: 结论
 
 Interacting with LLMs through speech has led to an increased demand for effective speech representation discretization.
-To address this, we propose SECodec, which can automatically determines the appropriate codebook size and integrates structural information into the quantization process.
-Extensive experiments demonstrate that SECodec outperforms EnCodec in speech reconstruction.
-Furthermore, we developed a Structural Entropy-based Speech Language Model (SESLM) that leverages SECodec, yielding superior results in terms of generated speech content accuracy and quality.
-Additionally, the experiments show that SECodec is capable of learning a more compressive and discrete codebook and producing more informative speech tokens.
+To address this, we propose ***SECodec***, which can automatically determines the appropriate codebook size and integrates structural information into the quantization process.
+Extensive experiments demonstrate that ***SECodec*** outperforms EnCodec in speech reconstruction.
+Furthermore, we developed a ***Structural Entropy-based Speech Language Model (SESLM)*** that leverages ***SECodec***, yielding superior results in terms of generated speech content accuracy and quality.
+Additionally, the experiments show that ***SECodec*** is capable of learning a more compressive and discrete codebook and producing more informative speech tokens.
