--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -101,6 +101,29 @@ Enhanced loss functions are also introduced to enable more accurate and efficien
 
 ## 3·Methodology: 方法
 
+### Architecture: 架构
+
+The overall architecture of the proposed model consists of one generator and two discriminators, as shown in Figure 1.
+The generator maps the spectrogram $z$ to an audio waveform $G_{\phi}(z)$, while the two discriminators $D_{\phi}$ and $D_{\psi}$ compare the real audio waveform $x$ and the generated waveform $G_{\phi}(z)$ in different ways.
+
+#### Generator: 生成器
+
+Recognizing that capturing long-term dependencies is crucial for modeling realistic speech audio, we propose a new generator architecture designed to learn these dependencies more effectively. The proposed architecture, as shown in Figure 2, incorporates two stages of Conformer blocks with ring attention and ×4 upsampling between the input and output convolutions. This approach contrasts with the upsampling process in HiFiGAN, which uses the multi-receptive field fusion (MRF) technique with [×8, ×8, ×2, ×2] transpose convolutions to perform upsampling and reconstruct raw audio. In comparison, our proposed structure simplifies the upsampling process by using two stages of Conformer blocks with ring attention and ×4 upsampling, providing a more efficient and streamlined approach to generating high-quality audio. The remaining Conformer blocks, excluding the ring attention, are identical to those in [18]. This modification improves the ability to capture long-term dependencies in the generated audio, enhancing the model's overall performance and synthesis quality. In the upsampling block, the snake activation function [23] helps the model learn the periodic structure of speech signals more accurately. Although the final output of the generator is the magnitude and phase of the spectrogram rather than the waveform, these components also exhibit periodic characteristics, making them suitable for modeling periodic structures. Unlike BigVGAN [3], no anti-aliasing filter is used for upsampling, as smaller upsampling ratios allow for more stable high-frequency processing. After upsampling, the inverse STFT reconstructs the signal in the frequency domain, separating amplitude and phase for better control. This structure maintains memory efficiency for long sequences while improving the learning of long-term dependencies in speech signals. Through these improvements, RingFormer achieves more precise speech synthesis without sacrificing speed.
+
+#### Ring Attention: 环注意力
+
+#### Discriminators: 判别器
+
+### Training Objective: 训练目标
+
+#### Adversarial Loss: 对抗损失
+
+#### Spectral Decomposition Loss: 频谱分解损失
+
+#### Feature Matching Loss: 特征匹配损失
+
+#### Final Loss: 最终损失
+
 ## 4·Experiments: 实验
 
 ## 5·Results: 结果
