--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -108,9 +108,41 @@ The generator maps the spectrogram $z$ to an audio waveform $G_{\phi}(z)$, while
 
 #### Generator: 生成器
 
-Recognizing that capturing long-term dependencies is crucial for modeling realistic speech audio, we propose a new generator architecture designed to learn these dependencies more effectively. The proposed architecture, as shown in Figure 2, incorporates two stages of Conformer blocks with ring attention and ×4 upsampling between the input and output convolutions. This approach contrasts with the upsampling process in HiFiGAN, which uses the multi-receptive field fusion (MRF) technique with [×8, ×8, ×2, ×2] transpose convolutions to perform upsampling and reconstruct raw audio. In comparison, our proposed structure simplifies the upsampling process by using two stages of Conformer blocks with ring attention and ×4 upsampling, providing a more efficient and streamlined approach to generating high-quality audio. The remaining Conformer blocks, excluding the ring attention, are identical to those in [18]. This modification improves the ability to capture long-term dependencies in the generated audio, enhancing the model's overall performance and synthesis quality. In the upsampling block, the snake activation function [23] helps the model learn the periodic structure of speech signals more accurately. Although the final output of the generator is the magnitude and phase of the spectrogram rather than the waveform, these components also exhibit periodic characteristics, making them suitable for modeling periodic structures. Unlike BigVGAN [3], no anti-aliasing filter is used for upsampling, as smaller upsampling ratios allow for more stable high-frequency processing. After upsampling, the inverse STFT reconstructs the signal in the frequency domain, separating amplitude and phase for better control. This structure maintains memory efficiency for long sequences while improving the learning of long-term dependencies in speech signals. Through these improvements, RingFormer achieves more precise speech synthesis without sacrificing speed.
+Recognizing that capturing long-term dependencies is crucial for modeling realistic speech audio, we propose a new generator architecture designed to learn these dependencies more effectively.
+The proposed architecture, as shown in Figure 2, incorporates two stages of Conformer blocks with ring attention and ×4 upsampling between the input and output convolutions.
+This approach contrasts with the upsampling process in HiFiGAN, which uses the multi-receptive field fusion (MRF) technique with [×8, ×8, ×2, ×2] transpose convolutions to perform upsampling and reconstruct raw audio.
+In comparison, our proposed structure simplifies the upsampling process by using two stages of Conformer blocks with ring attention and ×4 upsampling, providing a more efficient and streamlined approach to generating high-quality audio.
+The remaining Conformer blocks, excluding the ring attention, are identical to those in [18].
+This modification improves the ability to capture long-term dependencies in the generated audio, enhancing the model's overall performance and synthesis quality.
+In the upsampling block, the snake activation function [23] helps the model learn the periodic structure of speech signals more accurately.
+Although the final output of the generator is the magnitude and phase of the spectrogram rather than the waveform, these components also exhibit periodic characteristics, making them suitable for modeling periodic structures.
+Unlike BigVGAN [3], no anti-aliasing filter is used for upsampling, as smaller upsampling ratios allow for more stable high-frequency processing.
+After upsampling, the inverse STFT reconstructs the signal in the frequency domain, separating amplitude and phase for better control.
+This structure maintains memory efficiency for long sequences while improving the learning of long-term dependencies in speech signals.
+Through these improvements, RingFormer achieves more precise speech synthesis without sacrificing speed.
 
 #### Ring Attention: 环注意力
+
+Capturing long-term dependencies is crucial for modeling realistic speech audio.
+For instance, the duration of a phoneme can exceed 100ms, resulting in a high correlation between more than 2,200 adjacent samples in the raw waveform.
+Ring attention [18] is a mechanism designed to efficiently process long sequences by leveraging block-wise parallel computation.
+In RingFormer, ring attention is tailored for vocoders to effectively handle long sequences of speech signals.
+
+First, the mel-spectrogram upsampled from the MRF is divided into $N_d$ fixed-size blocks, and each block is assigned to an individual device.
+Here, device refers to an individual computational unit in a parallel processing system, while block represents a segment of a long sequence divided into a fixed length.
+Each device generates query, key, and value based on the divided mel-spectrogram, which are obtained through affine transformations using learnable weight matrices $W_Q$, $W_K$, and $W_V$.
+
+Subsequently, a key-value exchange mechanism based on a ring topology allows each device to receive key and value data from its adjacent device.
+This data exchange enables information to flow between blocks, thereby effectively integrating global dependencies and context across the entire sequence.
+This structure is well-suited for modeling both the temporal dependencies of speech signals and the harmonic structure within frequency bands, allowing it to capture the periodic characteristics of speech in detail.
+In particular, ring attention effectively resolves the memory bottleneck issue encountered when processing long sequences in vocoders.
+Since key-value exchanges and attention computations are designed to be performed in parallel across devices, computational efficiency is maximized, significantly reducing memory and computational costs during the training process for long sequences of data.
+Block-wise attention computations within the device are carried out as follows:
+
+where $i$ denotes the device index, and $d_k$ represents the dimension of the key vector.
+The query $Q_i$ performs a scaled dot product computation with the keys $K=\{K_i,\cdots,K_{i+d-1}\}$ in the same device, which is then multiplied with $V=\{V_i,\cdots,V_{i+d-1}\}$ to calculate the attention values.
+This method overcomes the memory constraints of traditional Transformer [24] models, allowing the context size to scale linearly with the number of devices.
+As a result, ring attention maintains computational efficiency while achieving high performance in both training and inference for extremely large context sizes.
 
 #### Discriminators: 判别器
 
