--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -160,7 +160,29 @@ By using these two discriminators, the diverse periodic patterns inherent in the
 
 ### Training Objective: 训练目标
 
+We use various loss functions to optimize RingFormer.
+To evaluate speech quality, it is integrated into the widely used TTS model VITS [26] and trained by connecting it to the model.
+As a result, the encoder parameters of VITS are also updated.
+
 #### Adversarial Loss: 对抗损失
+
+The RingFormer is trained using two discriminators.
+The first is the MPD, originally proposed in HiFi-GAN [2], and the second is the MS-SB-CQT discriminator [25].
+The MPD is designed as a combination of sub-discriminators based on Markovian windows, with each sub-discriminator specializing in detecting different periodic patterns in the input waveform.
+This structure allows for a systematic evaluation of speech data with diverse periodic characteristics.
+However, a limitation of the MPD is that its sub-discriminators evaluate only isolated samples, potentially overlooking broader contextual information.
+To address this limitation, the MS-SB-CQT discriminator, as proposed in [25], is incorporated to enhance performance.
+The adversarial loss is defined as follows:
+
+$$
+\begin{aligned}
+\mathcal{L}_{adv} &= \mathcal{L}_G + \mathcal{L}_D \\
+\mathcal{L}_G &= \alpha \mathbb{E}_z [(1-D_\theta(G_{\phi}(z)))^2] + (1-\alpha) \mathbb{E}_x [(1-D_{\psi}(x))^2] \\
+\mathcal{L}_D &= \alpha \mathbb{E}_{x,z} [(1-D_\theta(x))^2 + (D_\theta(G_{\phi}(z)))^2] + (1-\alpha) \mathbb{E}_{x,z} [(1- D_{\psi}(x))^2 + (D_{\psi}(G_{\phi}(z)))^2] \\
+\end{aligned}
+$$
+
+The contribution of each discriminator to the training loss is controlled by a weighting factor, $\alpha$, which is set to 0.5 to balance their roles during adversarial training.
 
 #### Spectral Decomposition Loss: 频谱分解损失
 
