--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -236,6 +236,47 @@ By setting these hyperparameters to 1, we ensure that each loss component contri
 
 ## 4·Experiments: 实验
 
+To validate the performance of RingFormer, it is applied to the decoder of the widely used TTS model, VITS [26], and the quality of the synthesized speech is evaluated.
+For comparison, the baseline vocoders used are HiFi-GAN [2], iSTFT-Net [15], and BigVGAN [3], which are state-of-the-art models known for achieving top performance in the field.
+These models are also applied to VITS with the same architecture and hyperparameters to ensure a fair comparison under equal conditions.
+Our code and audio samples are available on GitHub [34].
+
+### Datasets: 数据集
+
+In this study, we trained and evaluated the model using the widely used LJSpeech dataset [29].
+The LJSpeech dataset consists of 13,100 high-quality speech samples, totaling approximately 24 hours of speech data.
+Each sample is recorded at a sampling rate of 22,050 Hz and is commonly used in TTS research with English text.
+In this study, 500 samples from the 13,100 LJSpeech samples were allocated to the validation set to assess the model’s performance, while 12,500 samples were used for training.
+To further evaluate the model's performance, 30 samples were randomly selected from the remaining 100 samples for final testing.
+This data configuration ensured consistent and reliable training and evaluation.
+
+### Experimental Setup: 实验设置
+
+The proposed generator in this study employs two stages of upsampling.
+Initially, the number of channels is set to 512, and at each stage, the number of channels is halved according to $2^i$, where $i$ denotes the upsampling step.
+The Conformer block is configured by adjusting the input dimensions at each upsampling stage.
+It utilizes 8 attention heads, a feed-forward network dimension that is half of the input dimension, 2 Conformer layers, a kernel size of 31, and a dropout rate of 0.1.
+Key hyperparameters are summarized in Table 1.
+The model training is conducted on an Ubuntu 20.04 LTS operating system, with Docker used for managing software dependencies.
+The training process is carried out using a single Nvidia A100 GPU with 80GB of memory.
+
+### Evaluation Metrics: 评价指标
+
+In this study, the model's performance is evaluated from multiple perspectives using mel-cepstral distortion (MCD) [30], word error rate (WER), short-time objective intelligibility (STOI) [31], NISQA [32], mean opinion score (MOS), and comparison MOS (CMOS).
+
+MCD measures the difference in mel-frequency cepstral coefficients between the synthesized and reference speech.
+A lower MCD value indicates higher similarity between the two voices.
+WER evaluates the accuracy of speech recognition by measuring the alignment of the recognized text with the original transcript.
+A lower WER indicates fewer recognition errors.
+STOI quantifies the intelligibility of the synthesized speech in relation to the reference, with values ranging from 0 to 1.
+A value closer to 1 indicates higher intelligibility.
+NISQA is a deep learning-based metric for assessing the quality and naturalness of speech by mimicking human auditory perception and quantifying the subjective quality of speech.
+
+MOS is a subjective evaluation metric, where listeners rate the speech quality on a scale from 1 to 5.
+However, in this study, we utilize the MOS prediction system from UTMOS [33] for objective evaluation, which produces scores highly correlated with human ratings.
+Finally, CMOS is used to compare the relative quality between two speech samples, allowing listeners to select the better-quality sample, thus performing a subjective comparison.
+These diverse metrics enable a comprehensive evaluation of the model’s speech quality, intelligibility, and pronunciation accuracy.
+
 ## 5·Results: 结果
 
 ## 6·Conclusions: 结论
